# advanced-harness-1

./: .gitignore  .mcp.json  CLAUDE.md  CLAUDE_INTEGRATION_GUIDE.md  README.md  advanced-harness.code-workspace
.claude/agents/: threads-aggro-writer.md
.claude/skills/: skill-rules.json
.claude/skills/copyright-safe-style-transfer/: SKILL.md
.claude/skills/evan-insight-blog-writer/: SKILL.md
.claude/skills/fastapi-backend-guidelines/: README.md  skill.md
.claude/skills/nextjs-frontend-guidelines/: README.md  skill.md
.claude/skills/ppt-brand-guidelines/: SKILL.md
.claude/skills/pptx/: SKILL.md  package-lock.json
.claude/skills/pytest-backend-testing/: SKILL.md
.claude/skills/threads-writer/: SKILL.md  TEMPLATES.md
.claude/skills/yebi-startup-writer/: README.md  SKILL.md  analyze_docx.py
.claude/tsc-cache/0d08ad01-2623-4beb-b571-1f09a506e9d3/: commands.txt
.claude/tsc-cache/5a94626c-f9f3-4656-aeed-5693573829ee/: commands.txt
.claude/tsc-cache/6946630c-a1bd-4eda-aaef-26b26d286ea8/: commands.txt
.claude/tsc-cache/cee7dbce-16a3-4ee1-9756-49f44d52491a/: commands.txt
backend/: .dockerignore  .env.test  .pre-commit-config.yaml  Dockerfile  README.md  SQL_DEBUG_README.md  TESTING.md  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
backend/backend/: main.py
backend/backend/api/v1/routers/: auth.py  user.py
backend/backend/core/: config.py
backend/backend/db/: orm.py
backend/backend/domain/shared/: base_repository.py  query_helpers.py  raw_query_repository.py
backend/backend/domain/user/: __init__.py  auth_service.py  enums.py  model.py  repository.py  service.py
backend/backend/dtos/: __init__.py  auth.py  user.py
backend/backend/error/: __init__.py
backend/backend/middleware/: error_handler.py
backend/backend/scripts/: verify_trigram_support.py
backend/backend/utils/: __init__.py  logger.py  password.py
backend/scripts/: debug_sql.sh  entrypoint.sh  init_test_db.py  reset_test_db.py
ebook/: cover-design.md  design-guide.md  ebook-content.md  ebook-redesign.html  ebook-styled.html
frontend/: next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
frontend/claude-conversations/advanced-harness/: 20260112-1532_b5a3210b.md  20260112-1537_092bce1b.md  20260112-1537_634d7370.md  (+28 more)
frontend/claude-conversations/advanced-harness-frontend/: 20260116-1517_59ee381a.md  20260116-1526_df545eaa.md  20260116-1535_76cf3ca8.md
frontend/src/: middleware.ts
(+366 files in other folders)
